# django_proj_task

./: Dockerfile  Makefile  README.md  TODO.md  curl commands.txt  dump_all.sql  dump_data.sql  loaded_data.txt  manage.py  plan.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
budget_app/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
budget_app/migrations/: 0001_initial.py  0002_alter_category_options_alter_income_category.py  0003_rename_name_category_title.py  0004_expense_date_expense_updated_at_income_date_and_more.py  0005_alter_income_date.py
fakultet_upis/: asgi.py  settings.py  urls.py  wsgi.py
home_budget/: asgi.py  settings.py  urls.py  wsgi.py
home_budget/budget_app/: admin.py  models.py  serializers.py  urls.py  views.py
home_budget/budget_app/migrations/: 0003_rename_name_category_title.py  0004_expense_date_expense_updated_at_income_date_and_more.py
home_budget/home_budget/: settings.py  urls.py
tests/: conftest.py  test_category.py  test_expense.py  test_income.py  test_stats.py  test_users.py
upis/: admin.py  apps.py  auth.py  forms.py  managers.py  models.py  urls.py  views.py
upis/migrations/: 0001_initial.py  0002_alter_korisnik_password.py  0002_smjer_predmeti.py  0003_prijave_datum_rođenja_prijave_dokument_and_more.py  0004_korisnik_groups_korisnik_is_active_korisnik_is_staff_and_more.py  0005_rename_prijave_prijava_alter_smjer_table.py  0006_rename_slobodna_mjesta_smjer_slobodno.py  0007_merge_20250421_1415.py  0008_rename_upis_odobrenje_alter_odobrenje_options_and_more.py  0009_rename_objasnjenje_odobrenja_odobrenje_objasnjenje_and_more.py  0010_remove_odobrenje_smjer_remove_odobrenje_student_and_more.py
upis/templates/upis/: base.html  home.html  korisnik_confirm_delete.html  korisnik_edit.html  korisnik_list.html  korisnik_novi.html  login.html  logout.html  odobrenje_list.html  odobri.html  predmet_list.html  prijava.html  prijava_list.html  register.html  smjer_list.html  user_admin.html
