[tool.poetry]
name = "django-proj-task"
version = "0.1.0"
description = "Take home task"
authors = ["Tomislav Nazifović <tomislav.nazifovic@gmail.com>"]
readme = "README.md"
#packages = [{include = "django_proj_task", from="home_budget"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.2.4"
djangorestframework = "^3.16.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
